[gd_scene load_steps=4 format=2]

[ext_resource path="res://Glass and Marble 512x552.png" type="Texture" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://Chessboard.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]

[node name="Chessboard" type="Sprite" parent="."]
position = Vector2( 256, 280 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_left = 512.0
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 556.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="Label" parent="Control"]
margin_left = 24.0
margin_right = 62.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
text = "White"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="Label" parent="Control"]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
text = "Black"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="w_captured" type="Label" parent="Control"]
margin_left = 16.0
margin_top = 36.0
margin_right = 60.0
margin_bottom = 132.0
rect_scale = Vector2( 2, 2 )
text = "+0"
autowrap = true

[node name="b_captured" type="Label" parent="Control"]
margin_left = 176.0
margin_top = 36.0
margin_right = 216.0
margin_bottom = 128.0
rect_scale = Vector2( 2, 2 )
text = "+0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="Control"]
margin_left = 312.0
margin_right = 352.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
text = "Status"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c_status" type="Label" parent="Control"]
margin_left = 304.0
margin_top = 36.0
margin_right = 347.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
text = "In play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="b_capture" from="Chessboard" to="Control" method="_on_Chessboard_b_capture"]
[connection signal="check" from="Chessboard" to="Control" method="_on_Chessboard_check"]
[connection signal="checkmate" from="Chessboard" to="Control" method="_on_Chessboard_checkmate"]
[connection signal="w_capture" from="Chessboard" to="Control" method="_on_Chessboard_w_capture"]
